Bug fixed XML total calories counter displaying sometimes one digit less than it should. Minor fixing to the DailyReset.java

--- a/app/src/main/res/layout/activity_food_diary.xml
+++ b/app/src/main/res/layout/activity_food_diary.xml
@@ -10,10 +10,7 @@
         android:id="@+id/textViewTotalCalories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-        app:autoSizeMaxTextSize="120pt"
-        app:autoSizeMinTextSize="12pt"
-        app:autoSizeTextType="uniform"
+        android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -93,6 +90,7 @@
         android:id="@+id/listViewFoodList"
         android:layout_width="378dp"
         android:layout_height="447dp"
+        android:stackFromBottom="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.484"
