--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,25 +6,10 @@
     android:layout_height="wrap_content"
     tools:context=".MainActivity">
 
-    <ImageButton
-        android:id="@+id/settingsButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:background="#00000000"
-        android:contentDescription="@string/settings_button"
-        android:scaleType="fitXY"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/settings" />
-
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="409dp"
         android:layout_height="733dp"
-        android:layout_marginTop="32dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -38,45 +23,86 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:baselineAligned="false"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textViewStepsText"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/textViewStepsText"
-                    android:textAlignment="center"
-                    android:textSize="28sp" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.9"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/stepText"
+                    <ImageButton
+                        android:id="@+id/settingsButton"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="5dp"
+                        android:background="#00000000"
+                        android:contentDescription="@string/settings_button"
+                        android:onClick="goToSettings"
+                        android:scaleType="fitXY"
+                        app:srcCompat="@drawable/settings" />
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/steps"
-                    android:textAlignment="center"
-                    android:textSize="28sp" />
+                    android:layout_height="match_parent"
+                    android:layout_weight=".3"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textViewStepsTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/textViewStepsText"
+                        android:textAlignment="center"
+                        android:textSize="36sp" />
+
+                    <TextView
+                        android:id="@+id/stepText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/steps"
+                        android:textAlignment="center"
+                        android:textSize="28sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".9"
+                    android:orientation="vertical">
+
+                    <View
+                        android:id="@+id/view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:paddingTop="40sp">
+                android:layout_marginTop="60sp"
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textViewFoodDiary"
+                    android:id="@+id/textViewStepCounterSettingsTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/food_diary"
                     android:textAlignment="center"
-                    android:textSize="28sp" />
+                    android:textSize="36sp" />
 
                 <ImageButton
                     android:id="@+id/goToFoodDiaryButton"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_gravity="center"
+                    android:layout_marginTop="10sp"
                     android:background="#00000000"
                     android:contentDescription="@string/go_to_food_diary"
                     android:onClick="goToFoodDiary"
@@ -90,16 +116,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingTop="40sp">
+                android:layout_marginTop="60sp"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textViewBMITitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/bmica"
+                    android:text="@string/bmi_calculator"
                     android:textAlignment="center"
-                    android:textSize="28sp"
+                    android:textSize="36sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -116,6 +142,8 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_marginStart="10sp"
+                        android:layout_marginTop="10sp"
                         android:layout_marginEnd="5sp"
                         android:layout_weight=".50"
                         android:orientation="vertical">
@@ -124,7 +152,7 @@
                             android:id="@+id/textViewWeight"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/yourW"
+                            android:text="@string/your_weight"
                             android:textAlignment="center"
                             android:textSize="24sp" />
 
@@ -132,7 +160,7 @@
                             android:id="@+id/weightInput"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/kilo"
+                            android:hint="@string/weight_input"
                             android:importantForAutofill="no"
 
                             android:inputType="numberDecimal"
@@ -144,6 +172,8 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_marginStart="5sp"
+                        android:layout_marginTop="10sp"
+                        android:layout_marginEnd="10sp"
                         android:layout_weight=".50"
                         android:orientation="vertical">
 
@@ -151,7 +181,7 @@
                             android:id="@+id/textViewHeight"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/yourH"
+                            android:text="@string/your_height"
                             android:textAlignment="center"
 
                             android:textSize="24sp" />
@@ -160,7 +190,7 @@
                             android:id="@+id/heightInput"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/centim"
+                            android:hint="@string/height_input"
 
                             android:importantForAutofill="no"
                             android:inputType="numberDecimal"
@@ -170,30 +200,28 @@
 
                 <Button
                     android:id="@+id/bmiButton"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginStart="20sp"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginEnd="20sp"
+                    android:backgroundTint="#14B381"
                     android:onClick="calculateBMI"
-                    android:text="@string/calcu" />
+                    android:text="@string/calculate" />
 
                 <TextView
                     android:id="@+id/textViewCalculatedBMI"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/yourbmi"
+                    android:layout_marginTop="10sp"
+                    android:text="@string/calculatedBmi"
                     android:textAlignment="center"
-                    android:textSize="18sp"
+                    android:textSize="24sp"
                     app:layout_constraintTop_toBottomOf="@+id/calcBut" />
             </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
