--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -71,14 +71,17 @@
             </LinearLayout>
 
             <RadioGroup
+                android:id="@+id/radioGroupTheme"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:checkedButton="@id/radioButtonTheme1"
                 android:orientation="horizontal">
 
                 <RadioButton
                     android:id="@+id/radioButtonTheme1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
                     android:layout_weight="1"
                     android:text="@string/theme1" />
 
@@ -93,15 +96,15 @@
                     android:id="@+id/radioButtonTheme3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
                     android:layout_weight="1"
                     android:text="@string/theme3" />
             </RadioGroup>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="60dp"
-                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
@@ -126,9 +129,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="60sp"
-                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
@@ -149,6 +151,45 @@
                     android:hint="@string/calorie_target"
                     android:inputType="number"
                     android:textAlignment="center" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="60dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textViewBMICalculatorSettingsTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/bmi_calculator"
+                    android:textAlignment="center"
+                    android:textSize="36sp" />
+
+                <RadioGroup
+                    android:id="@+id/radioGroupBMI"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:checkedButton="@id/radioButtonMetric"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/radioButtonMetric"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_weight="1"
+                        android:text="@string/metric" />
+
+                    <RadioButton
+                        android:id="@+id/radioButtonImperial"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="20dp"
+                        android:layout_weight="1"
+                        android:text="@string/imperial" />
+                </RadioGroup>
             </LinearLayout>
 
         </LinearLayout>
