--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -42,7 +42,10 @@
                         android:contentDescription="@string/settings_button"
                         android:onClick="goToSettings"
                         android:scaleType="fitXY"
+                        app:iconTint="?attr/colorControlNormal"
                         app:srcCompat="@drawable/settings" />
+
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -66,6 +69,13 @@
                         android:text="@string/steps"
                         android:textAlignment="center"
                         android:textSize="28sp" />
+
+                    <Button
+                        android:id="@+id/resButt"
+                        android:onClick="doReset"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/reset_button" />
 
                 </LinearLayout>
 
