--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/textViewStepsText"
                         android:textAlignment="center"
-                        android:textSize="36sp" />
+                        android:textSize="40sp" />
 
                     <TextView
                         android:id="@+id/stepText"
@@ -65,7 +65,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/steps"
                         android:textAlignment="center"
-                        android:textSize="28sp" />
+                        android:textSize="36sp" />
 
                 </LinearLayout>
 
@@ -86,7 +86,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="60sp"
+                android:layout_marginTop="40sp"
                 android:orientation="vertical">
 
                 <TextView
@@ -95,7 +95,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/food_diary"
                     android:textAlignment="center"
-                    android:textSize="36sp" />
+                    android:textSize="40sp" />
 
                 <ImageButton
                     android:id="@+id/goToFoodDiaryButton"
@@ -116,7 +116,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="60sp"
+                android:layout_marginTop="40sp"
                 android:orientation="vertical">
 
                 <TextView
@@ -125,7 +125,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/bmi_calculator"
                     android:textAlignment="center"
-                    android:textSize="36sp"
+                    android:textSize="40sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -143,7 +143,7 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_marginStart="10sp"
-                        android:layout_marginTop="10sp"
+                        android:layout_marginTop="20sp"
                         android:layout_marginEnd="5sp"
                         android:layout_weight=".50"
                         android:orientation="vertical">
@@ -154,7 +154,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/your_weight"
                             android:textAlignment="center"
-                            android:textSize="24sp" />
+                            android:textSize="30sp" />
 
                         <EditText
                             android:id="@+id/weightInput"
@@ -172,7 +172,7 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_marginStart="5sp"
-                        android:layout_marginTop="10sp"
+                        android:layout_marginTop="20sp"
                         android:layout_marginEnd="10sp"
                         android:layout_weight=".50"
                         android:orientation="vertical">
@@ -184,7 +184,7 @@
                             android:text="@string/your_height"
                             android:textAlignment="center"
 
-                            android:textSize="24sp" />
+                            android:textSize="30sp" />
 
                         <EditText
                             android:id="@+id/heightInput"
@@ -201,10 +201,10 @@
                 <Button
                     android:id="@+id/bmiButton"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="100sp"
                     android:layout_gravity="center"
                     android:layout_marginStart="20sp"
-                    android:layout_marginTop="10sp"
+                    android:layout_marginTop="20sp"
                     android:layout_marginEnd="20sp"
                     android:backgroundTint="#14B381"
                     android:onClick="calculateBMI"
